# HelixRich

./: README.md  TODO.txt
HR/: CMakeLists.txt  Makefile  rich.cpp  tutorial.cpp
HR-build/: .vis.mac.swp  CMakeCache.txt  ElectronTracking.out  HelixRich.out  Makefile  PrimaryParticles.out  cmake_install.cmake  rich  tutorial  vis.mac
HR/include/: DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SimulationConstants.hh  StackingAction.hh  SteppingAction.hh  TrackerHit.hh  TrackerSD.hh
HR/src/: DetectorConstruction.cpp  EventAction.cpp  PhysicsList.cpp  PrimaryGeneratorAction.cpp  RunAction.cpp  SimulationConstants.cpp  StackingAction.cpp  SteppingAction.cpp  TrackerHit.cpp  TrackerSD.cpp
Visualization/: Output_scatterplotting.ipynb  Visualization_June_18.ipynb  optical_photon_vis.ipynb  output_parser.ipynb  output_parser.py
Visualization/.ipynb_checkpoints/: Visualization_June_18-checkpoint.ipynb  output_parser-checkpoint.ipynb
